--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^0.0.4",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "cache-manager": "^3.6.0",
+    "jsdom": "^19.0.0",
     "reflect-metadata": "^0.1.13",
+    "request": "^2.88.2",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
   },
@@ -36,7 +39,9 @@
     "@types/cache-manager": "^3.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "27.0.2",
+    "@types/jsdom": "^16.2.14",
     "@types/node": "^16.0.0",
+    "@types/request-promise": "^4.1.48",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
