--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^0.0.4",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "cache-manager": "^3.6.0",
-    "cloudscraper": "^4.6.0",
     "jsdom": "^19.0.0",
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.2",
