--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "adkami-scrapping-api",
-  "version": "0.0.1",
+  "version": "2.0.0",
   "description": "",
   "author": "",
   "private": true,
@@ -21,13 +21,13 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/axios": "^0.0.4",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.1.6",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "cache-manager": "^3.6.0",
-    "jsdom": "^19.0.0",
+    "cheerio": "^1.0.0-rc.10",
+    "puppeteer": "^13.3.1",
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.2",
     "rimraf": "^3.0.2",
